// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enhanceHanson allows defining variables in result 1`] = `
Object {
  "$type": "requirement",
  "Req": Object {
    "$type": "requirement",
    "result": Object {
      "$count": Object {
        "$num": 1,
        "$operator": "$gte",
      },
      "$of": Array [
        Object {
          "$course": Object {
            "department": "MATH",
            "number": 330,
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "department": "MATH",
            "number": 340,
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "department": "MATH",
            "number": 344,
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "department": "MATH",
            "number": 348,
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "department": "MATH",
            "number": 351,
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "department": "MATH",
            "number": 356,
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "department": "MATH",
            "number": 364,
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "department": "MATH",
            "number": 382,
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "department": "MATH",
            "number": 384,
          },
          "$type": "course",
        },
      ],
      "$type": "of",
    },
  },
  "name": undefined,
  "result": Object {
    "$requirement": "Req",
    "$type": "reference",
  },
  "revision": undefined,
  "slug": "",
  "type": undefined,
}
`;

exports[`enhanceHanson allows using variables in the filter 1`] = `
Object {
  "$type": "requirement",
  "Req": Object {
    "$type": "requirement",
    "filter": Object {
      "$distinct": false,
      "$filterType": "of",
      "$of": Array [
        Object {
          "$course": Object {
            "department": "MATH",
            "number": 330,
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "department": "MATH",
            "number": 340,
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "department": "MATH",
            "number": 344,
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "department": "MATH",
            "number": 348,
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "department": "MATH",
            "number": 351,
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "department": "MATH",
            "number": 356,
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "department": "MATH",
            "number": 364,
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "department": "MATH",
            "number": 382,
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "department": "MATH",
            "number": 384,
          },
          "$type": "course",
        },
      ],
      "$type": "filter",
    },
  },
  "name": undefined,
  "result": Object {
    "$requirement": "Req",
    "$type": "reference",
  },
  "revision": undefined,
  "slug": "",
  "type": undefined,
}
`;

exports[`enhanceHanson expands string-only keys into objects with a "result" key 1`] = `
Object {
  "$type": "requirement",
  "Requirement": Object {
    "$type": "requirement",
    "result": Object {
      "$course": Object {
        "department": "CSCI",
        "number": 121,
      },
      "$type": "course",
    },
  },
  "name": undefined,
  "result": Object {
    "$requirement": "Requirement",
    "$type": "reference",
  },
  "revision": undefined,
  "slug": "",
  "type": undefined,
}
`;

exports[`enhanceHanson parses "filter" strings with the Filter PEG rule 1`] = `
Object {
  "$type": "requirement",
  "Req": Object {
    "$type": "requirement",
    "filter": Object {
      "$distinct": false,
      "$filterType": "of",
      "$of": Array [
        Object {
          "$course": Object {
            "department": "CSCI",
            "number": 121,
          },
          "$type": "course",
        },
      ],
      "$type": "filter",
    },
  },
  "name": undefined,
  "result": Object {
    "$requirement": "Req",
    "$type": "reference",
  },
  "revision": undefined,
  "slug": "",
  "type": undefined,
}
`;

exports[`enhanceHanson parses "result" strings with the Result PEG rule 1`] = `
Object {
  "$type": "requirement",
  "Req": Object {
    "$type": "requirement",
    "result": Object {
      "$count": Object {
        "$num": 1,
        "$operator": "$gte",
      },
      "$of": Array [
        Object {
          "$course": Object {
            "department": "CSCI",
            "number": 121,
          },
          "$type": "course",
        },
      ],
      "$type": "of",
    },
  },
  "name": undefined,
  "result": Object {
    "$requirement": "Req",
    "$type": "reference",
  },
  "revision": undefined,
  "slug": "",
  "type": undefined,
}
`;
